--- a/CoffeeShopManager/DTO/DTO.csproj
+++ b/CoffeeShopManager/DTO/DTO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO_Employee.cs" />
+    <Compile Include="DTO_User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
