--- a/CoffeeShopManager/BUS/BUS.csproj
+++ b/CoffeeShopManager/BUS/BUS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS_Employee.cs" />
+    <Compile Include="BUS_UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
