--- a/CoffeeShopManager/BUS/BUS.csproj
+++ b/CoffeeShopManager/BUS/BUS.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS_Employee.cs" />
+    <Compile Include="BUS_Manager.cs" />
     <Compile Include="BUS_UserInfo.cs" />
+    <Compile Include="BUS_Workers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
