Update methods GetByEmail for DAL Manager, Employee and Worker classes; move connection string to App.config in GUI

--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="OneDB"
+         connectionString="Server=tcp:one-server.database.windows.net,1433;Initial Catalog=OneDB;Persist Security Info=False;User ID=Longsans;Password=OneBigServer123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
