Add DAL_Products; minor fixes

--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -5,7 +5,6 @@
     </startup>
   <connectionStrings>
     <add name="OneDB"
-         connectionString="Server=tcp:one-server.database.windows.net,1433;Initial Catalog=OneDB;Persist Security Info=False;User ID=Longsans;Password=OneBigServer123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-         providerName="System.Data.SqlClient"/>
+         connectionString="Server=tcp:one-server.database.windows.net,1433;Initial Catalog=OneDB;Persist Security Info=False;User ID=Longsans;Password=OneBigServer123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
   </connectionStrings>
 </configuration>
