--- a/CoffeeShopManager/DAL/DAL.csproj
+++ b/CoffeeShopManager/DAL/DAL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DAL_Employee.cs" />
     <Compile Include="DAL_Manager.cs" />
+    <Compile Include="DAL_Products.cs" />
     <Compile Include="DAL_UserInfo.cs" />
     <Compile Include="DAL_Workers.cs" />
     <Compile Include="DBConnection.cs" />
