Update bus product

--- a/CoffeeShopManager/BUS/BUS.csproj
+++ b/CoffeeShopManager/BUS/BUS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BUS_Employee.cs" />
     <Compile Include="BUS_Manager.cs" />
+    <Compile Include="BUS_Product.cs" />
     <Compile Include="BUS_UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
