--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -74,11 +74,23 @@
     <Compile Include="frmEditEmployees.Designer.cs">
       <DependentUpon>frmEditEmployees.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmEditProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEditProduct.Designer.cs">
+      <DependentUpon>frmEditProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmHome.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmHome.Designer.cs">
       <DependentUpon>frmHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmInsertProDuct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInsertProDuct.Designer.cs">
+      <DependentUpon>frmInsertProDuct.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -131,8 +143,14 @@
     <EmbeddedResource Include="frmEditEmployees.resx">
       <DependentUpon>frmEditEmployees.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmEditProduct.resx">
+      <DependentUpon>frmEditProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmHome.resx">
       <DependentUpon>frmHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmInsertProDuct.resx">
+      <DependentUpon>frmInsertProDuct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
@@ -193,6 +211,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\20394156-coffee-time-seamless-background-for-your-design.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\border_none_32px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\select_none_80px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
