--- a/CoffeeShopManager/DAL/DAL.csproj
+++ b/CoffeeShopManager/DAL/DAL.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL_Customers.cs" />
     <Compile Include="DAL_Employee.cs" />
     <Compile Include="DAL_Manager.cs" />
     <Compile Include="DAL_Products.cs" />
+    <Compile Include="DAL_Receipts.cs" />
     <Compile Include="DAL_UserInfo.cs" />
     <Compile Include="DAL_Workers.cs" />
     <Compile Include="DBConnection.cs" />
