--- a/CoffeeShopManager/DTO/DTO.csproj
+++ b/CoffeeShopManager/DTO/DTO.csproj
@@ -42,9 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_Customer.cs" />
     <Compile Include="DTO_Employee.cs" />
     <Compile Include="DTO_Manager.cs" />
     <Compile Include="DTO_Product.cs" />
+    <Compile Include="DTO_Receipt.cs" />
+    <Compile Include="DTO_ReceiptDetails.cs" />
+    <Compile Include="DTO_Shop.cs" />
     <Compile Include="DTO_User.cs" />
     <Compile Include="DTO_Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
