--- a/CoffeeShopManager/DTO/DTO.csproj
+++ b/CoffeeShopManager/DTO/DTO.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DTO_Receipt.cs" />
     <Compile Include="DTO_ReceiptDetails.cs" />
     <Compile Include="DTO_Shop.cs" />
+    <Compile Include="DTO_Table.cs" />
     <Compile Include="DTO_User.cs" />
     <Compile Include="DTO_Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
