--- a/CoffeeShopManager/BUS/BUS.csproj
+++ b/CoffeeShopManager/BUS/BUS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BUS_Employee.cs" />
     <Compile Include="BUS_Manager.cs" />
     <Compile Include="BUS_Product.cs" />
+    <Compile Include="BUS_Shop.cs" />
     <Compile Include="BUS_UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
