--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -63,6 +63,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataGridViewNumericUpDownCell.cs" />
+    <Compile Include="Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Test.Designer.cs">
+      <DependentUpon>Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +174,12 @@
     <Compile Include="UserControlNotifications.Designer.cs">
       <DependentUpon>UserControlNotifications.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControlOrderProduct.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControlOrderProduct.Designer.cs">
+      <DependentUpon>UserControlOrderProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControlProductTab.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -248,6 +261,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Test.resx">
+      <DependentUpon>Test.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ucOrderHistorycs.resx">
       <DependentUpon>ucOrderHistorycs.cs</DependentUpon>
     </EmbeddedResource>
@@ -259,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserControlManagerAndShopInfo.resx">
       <DependentUpon>UserControlManagerAndShopInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControlOrderProduct.resx">
+      <DependentUpon>UserControlOrderProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControlProductTab.resx">
       <DependentUpon>UserControlProductTab.cs</DependentUpon>
@@ -360,6 +379,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\left-arrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_delete_bin_16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
