--- a/CoffeeShopManager/DAL/DAL.csproj
+++ b/CoffeeShopManager/DAL/DAL.csproj
@@ -49,6 +49,8 @@
     <Compile Include="DAL_Products.cs" />
     <Compile Include="DAL_Receipts.cs" />
     <Compile Include="DAL_Shop.cs" />
+    <Compile Include="DAL_StockItems.cs" />
+    <Compile Include="DAL_Suppliers.cs" />
     <Compile Include="DAL_Tables.cs" />
     <Compile Include="DAL_TableSitting.cs" />
     <Compile Include="DAL_UserInfo.cs" />
