--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmChangeAuthCodeShop.Designer.cs">
       <DependentUpon>frmChangeAuthCodeShop.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmShowDetailTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmShowDetailTable.Designer.cs">
+      <DependentUpon>frmShowDetailTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -292,6 +298,9 @@
     <EmbeddedResource Include="frmRegister.resx">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmShowDetailTable.resx">
+      <DependentUpon>frmShowDetailTable.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -433,6 +442,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8_delete_bin_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ok_48px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\checked_80px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
